@@ -1,3 +1,8 @@
+2009-09-23  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* textmodes/flyspell.el (sgml-mode-flyspell-verify): Pass limit args
+	to looking-back to avoid ridiculous slow down in large files (bug#4511).
+
 2009-09-23  Glenn Morris  <rgm@gnu.org>
 
 	* mail/rmail.el (rmail-reply): Don't try to add a References header when
@@ -127,9 +132,10 @@
 	(vc-git-stash-show-at-point): New functions.
 	(vc-git-stash-map): New keymap.
 
-	* register.el (ctl-x-r-map): Define the keys here instead of using autoload.
+	* register.el (ctl-x-r-map): Define the keys here instead of
+	using autoload.
 
-2009-09-20  Thierry Volpiatto  <thierry.volpiatto@gmail.com>
+2009-09-20  Thierry Volpiatto  <thierry.volpiatto@gmail.com>  (tiny change)
 
 	* bookmark.el (bookmark-write-file): Avoid calling `pp' with large
 	list, to workaround performance problem (bug#4485).
